# gitlab-mcp

./: .env.example  README.md  pyproject.toml  requirements.txt
gitlab_mcp/: __main__.py  client.py  requirements.txt  server.py
gitlab_mcp/tools/: __init__.py  issues.py  merge_requests.py
