[project]
name = "gitlab-mcp"
version = "0.1.0"
description = "MCP server for GitLab integration (Issues, Merge Requests)"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "python-gitlab>=4.0.0",
    "uvicorn>=0.30.0",
    "starlette>=0.40.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
gitlab-mcp = "gitlab_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gitlab_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
